Fix ProductCard photo size on tablet

--- a/src/pages/shared/components/ProductCard/ProductCard.scss
+++ b/src/pages/shared/components/ProductCard/ProductCard.scss
@@ -12,7 +12,7 @@
   height: 439px;
   min-width: 212px;
 
-  padding: 31px;
+  padding: $padding-big;
 
   border: 1px solid $color-elements;
 
@@ -37,16 +37,22 @@
 
   &__image-wrapper {
     width: 100%;
+    flex-grow: 1;
+    text-align: center;
   }
 
   &__image {
-    width: 100%;
+    max-width: 100%;
     max-height: 129px;
 
+    flex-grow: 1;
+
     object-fit: contain;
+    object-position: center center;
 
     @include for-tablet {
-      max-height: 202px;
+      // height: 202px;
+      max-height: 196px;
     }
   }
 
@@ -56,7 +62,7 @@
     font-weight: 600;
     line-height: 21px;
     text-align: left;
-    padding-top: 16px;
+    padding-top: 8px;
     margin: 0;
     color: $color-primary;
     text-decoration: none;
