--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -18,3 +18,4 @@ $side-padding-16: 0 16px;
 $side-padding-24: 0 24px;
 $padding-small: 16px;
 $padding-medium: 24px;
+$padding-big: 32px;
